[package]
name = "ronintest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio="1.21.0"
web3 = "0.18.0"
serde = "1.0.144"
dotenv = "0.15.0"
futures = "0.3.24"
influxdb = { version = "0.5.2", features = ["derive"] }
chrono = "0.4"
influxdb2 = "0.3"